--- a/pages/page7.html
+++ b/pages/page7.html
@@ -1,1 +1,9 @@
+<div class="frame frame--half-right">
+  <div class="frame--half-right__bg">
+    <img class="pic__full-height" src="pics/together_right.png">
+  </div>
+  <div class="frame--half-right__pic">
+    <img class="zoom-this pic__full-height" src="pics/chure1.png">
+  </div>
+</div>
 <span class="page-number">7</span>
